--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/nav_choose_dining_method"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Welcome!" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/nav_choose_mie"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="Pilih Mie" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/nav_choose_topping"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="Pilih Topping" />
+
+
+    <item
+        android:id="@+id/nav_choose_pedas"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Pilih Pedas" />
+
+    <item
+        android:id="@+id/nav_choose_drink"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Pilih Minum" />
+
+    <!--item
+        android:id="@+id/nav_choose_payment"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Pilih Cara Bayar" /-->
 
 </menu>
