Saving the quantity by changing State on each change. NOT IDEAL! But i can't seem to find another way.

--- a/app/src/main/res/layout/fragment_choose_flavour.xml
+++ b/app/src/main/res/layout/fragment_choose_flavour.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent">
 
     <GridView
-        android:id="@+id/grid_mie"
+        android:id="@+id/grid_mie_flavour"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:numColumns="2"
         android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
-        android:listSelector="@drawable/grid_view_selector"/>
+        android:horizontalSpacing="5dp" />
 
 
 </LinearLayout>
