Orders with no Drinks or Toppings now working. Turned off quantity dialog, have to use + or -. Added tab disabling so users cannot skip mandatory tabs. Override toString() in Order model

--- a/app/src/main/res/layout/grid_mie_flavour_item.xml
+++ b/app/src/main/res/layout/grid_mie_flavour_item.xml
@@ -20,6 +20,7 @@
         android:id="@+id/quantity"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        app:qv_quantityDialog="false"
         />
 
 </LinearLayout>
