--- a/app/src/main/res/layout/fragment_choose_brand.xml
+++ b/app/src/main/res/layout/fragment_choose_brand.xml
@@ -11,13 +11,15 @@
         android:verticalSpacing="5dp"
         android:horizontalSpacing="5dp"
         android:gravity="center"
-        android:stretchMode="columnWidth"/>
+        android:stretchMode="columnWidth"
+        android:layout_marginBottom="100dp"/>
 
     <Button
         android:id="@+id/brand_lanjutkan"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LANJUTKAN"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="100dp"
+        android:text="PILIH MINUM AJA"
+        android:layout_alignParentBottom="true"
+        />
 
 </RelativeLayout>
