--- a/app/src/main/res/layout/fragment_choose_topping.xml
+++ b/app/src/main/res/layout/fragment_choose_topping.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,5 +11,14 @@
         android:verticalSpacing="5dp"
         android:horizontalSpacing="5dp"
         android:gravity="center"
-        android:stretchMode="columnWidth"/>
-</LinearLayout>
+        android:stretchMode="columnWidth"
+        android:layout_marginBottom="100dp"/>
+
+    <Button
+        android:id="@+id/topping_lanjutkan"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:text="LANJUTKAN"
+        android:layout_alignParentBottom="true"
+        android:background="@color/supremieRed"/>
+</RelativeLayout>
