--- a/app/src/main/res/layout/grid_quantity_price_item.xml
+++ b/app/src/main/res/layout/grid_quantity_price_item.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/mie_flavour_img"
+        android:id="@+id/grid_img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         />
 
     <TextView
-        android:id="@+id/mie_flavour"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/mie_flavour_img"
+        android:layout_below="@+id/grid_img"
         android:layout_marginBottom="10dp"
         android:textSize="30dp"
         />
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/mie_flavour"
+        android:layout_below="@+id/name"
         android:textSize="25dp"
         android:textColor="@color/supremieRed"/>
 
