--- a/app/src/main/res/layout/fragment_choose_brand.xml
+++ b/app/src/main/res/layout/fragment_choose_brand.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <GridView
-        android:id="@+id/grid_mie_brand"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="2"
-        android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
-        android:gravity="center"
-        android:stretchMode="columnWidth"
-        android:layout_marginBottom="100dp"/>
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/brand_lanjutkan"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:text="PILIH MINUM AJA"
-        android:layout_alignParentBottom="true"
-        />
+        <include layout="@layout/actionbar"/>
 
-</RelativeLayout>
+        <GridView
+            android:id="@+id/grid_mie_brand"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="2"
+            android:verticalSpacing="5dp"
+            android:horizontalSpacing="5dp"
+            android:gravity="center"
+            android:stretchMode="columnWidth"
+            android:layout_marginBottom="100dp"/>
+
+        <Button
+            android:id="@+id/brand_lanjutkan"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="PILIH MINUM AJA"
+            android:layout_alignParentBottom="true"
+            />
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
