Refined styling. Renamed to shorter names. There is a bug where mie id in State gets set even when skipping straight to drinks.

--- a/app/src/main/res/layout/actionbar.xml
+++ b/app/src/main/res/layout/actionbar.xml
@@ -17,21 +17,17 @@
             android:id="@+id/toolbar"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:background="@color/colorNavBar"
+            android:background="@color/supremieRed"
             >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="30dp"
+                android:textSize="50dp"
                 android:id="@+id/toolbar_title"/>
 
-
-
         </android.support.v7.widget.Toolbar>
-
-
 
     </LinearLayout>
 
