--- a/app/src/main/res/layout/grid_item_pedas.xml
+++ b/app/src/main/res/layout/grid_item_pedas.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/pedas_img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_centerHorizontal="true"/>
 
     <TextView
@@ -17,6 +18,7 @@
         android:background="@color/supremieRed"
         android:textColor="@color/pureWhite"
         android:lines="2"
-        android:textSize="25dp"/>
+        android:textSize="25dp"
+        android:layout_below="@+id/pedas_img"/>
 
 </RelativeLayout>
