--- a/app/src/main/res/layout/grid_mie_brand_item.xml
+++ b/app/src/main/res/layout/grid_mie_brand_item.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/mie_brand_img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_centerHorizontal="true"/>
 
     <TextView
