--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
 
 
-        <com.bintang5.supremie.activity.ExpandableHeightGridView
+        <com.bintang5.supremie.activity.ExpHeightGridView
             android:id="@+id/grid_order_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,7 +23,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="700dp"
-            android:layout_below="@id/grid_order_summary">
+            android:layout_below="@id/grid_order_summary"
+            android:layout_alignParentBottom="true">
             <TextView
                 android:id="@+id/subtotal_text"
                 android:layout_width="wrap_content"
@@ -99,13 +100,14 @@
                 android:layout_marginBottom="10dp"
                 android:layout_above="@+id/button_go_to_payment_method"/>
 
-            <Button
+            <android.support.design.widget.FloatingActionButton
                 android:id="@+id/button_go_to_payment_method"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="PEMBAYARAN"
                 android:background="@color/supremieRed"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"/>
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
