--- a/app/src/main/res/layout/grid_always_active_lanjut.xml
+++ b/app/src/main/res/layout/grid_always_active_lanjut.xml
@@ -18,8 +18,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:numColumns="3"
-                android:verticalSpacing="5dp"
-                android:horizontalSpacing="5dp"
+                android:verticalSpacing="15dp"
+                android:horizontalSpacing="15dp"
+                android:background="@color/lightGrey"
                 android:gravity="center"
                 android:stretchMode="columnWidth"
                 android:layout_marginBottom="100dp"/>
