--- a/app/src/main/res/layout/grid_order_summary_item.xml
+++ b/app/src/main/res/layout/grid_order_summary_item.xml
@@ -7,11 +7,12 @@
 
     <TextView
         android:id="@+id/left_text"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:textColor="@color/black"
         android:textSize="25dp"
+        android:maxLines="2"
         android:layout_marginLeft="35dp"/>
 
     <TextView
