--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -22,7 +22,7 @@
             />
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="700dp"
+            android:layout_height="500dp"
             android:layout_below="@id/grid_order_summary"
             android:layout_alignParentBottom="true">
             <TextView
@@ -100,14 +100,13 @@
                 android:layout_marginBottom="10dp"
                 android:layout_above="@+id/button_go_to_payment_method"/>
 
-            <android.support.design.widget.FloatingActionButton
+            <ImageButton
                 android:id="@+id/button_go_to_payment_method"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="PEMBAYARAN"
-                android:background="@color/supremieRed"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"/>
+                android:src="@drawable/bayar_button_selector"
+                />
         </RelativeLayout>
     </RelativeLayout>
 </ScrollView>
