--- a/app/src/main/res/layout/choose_dining_method.xml
+++ b/app/src/main/res/layout/choose_dining_method.xml
@@ -50,4 +50,14 @@
         android:layout_below="@+id/atau"
         android:src="@drawable/bungkus_button_selector"/>
 
+    <Button
+        android:id="@+id/button_clear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_takeaway"
+        android:text="HAPUS SEMUA PILIHAN"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
+
 </RelativeLayout>
